--- a/_modules/index.html
+++ b/_modules/index.html
@@ -179,15 +179,23 @@
 <li><a href="TermTk/TTkTestWidgets/logviewer.html">TermTk.TTkTestWidgets.logviewer</a></li>
 <li><a href="TermTk/TTkTestWidgets/testwidget.html">TermTk.TTkTestWidgets.testwidget</a></li>
 <li><a href="TermTk/TTkTestWidgets/testwidgetsizes.html">TermTk.TTkTestWidgets.testwidgetsizes</a></li>
+<li><a href="TermTk/TTkWidgets/Fancy/table.html">TermTk.TTkWidgets.Fancy.table</a></li>
+<li><a href="TermTk/TTkWidgets/Fancy/tableview.html">TermTk.TTkWidgets.Fancy.tableview</a></li>
+<li><a href="TermTk/TTkWidgets/Fancy/tree.html">TermTk.TTkWidgets.Fancy.tree</a></li>
+<li><a href="TermTk/TTkWidgets/Fancy/treeview.html">TermTk.TTkWidgets.Fancy.treeview</a></li>
+<li><a href="TermTk/TTkWidgets/Fancy/treewidget.html">TermTk.TTkWidgets.Fancy.treewidget</a></li>
 <li><a href="TermTk/TTkWidgets/TTkPickers/colorpicker.html">TermTk.TTkWidgets.TTkPickers.colorpicker</a></li>
+<li><a href="TermTk/TTkWidgets/TTkPickers/filepicker.html">TermTk.TTkWidgets.TTkPickers.filepicker</a></li>
+<li><a href="TermTk/TTkWidgets/about.html">TermTk.TTkWidgets.about</a></li>
 <li><a href="TermTk/TTkWidgets/button.html">TermTk.TTkWidgets.button</a></li>
 <li><a href="TermTk/TTkWidgets/checkbox.html">TermTk.TTkWidgets.checkbox</a></li>
 <li><a href="TermTk/TTkWidgets/combobox.html">TermTk.TTkWidgets.combobox</a></li>
 <li><a href="TermTk/TTkWidgets/frame.html">TermTk.TTkWidgets.frame</a></li>
 <li><a href="TermTk/TTkWidgets/graph.html">TermTk.TTkWidgets.graph</a></li>
+<li><a href="TermTk/TTkWidgets/image.html">TermTk.TTkWidgets.image</a></li>
 <li><a href="TermTk/TTkWidgets/label.html">TermTk.TTkWidgets.label</a></li>
 <li><a href="TermTk/TTkWidgets/lineedit.html">TermTk.TTkWidgets.lineedit</a></li>
-<li><a href="TermTk/TTkWidgets/list.html">TermTk.TTkWidgets.list</a></li>
+<li><a href="TermTk/TTkWidgets/list_.html">TermTk.TTkWidgets.list_</a></li>
 <li><a href="TermTk/TTkWidgets/listwidget.html">TermTk.TTkWidgets.listwidget</a></li>
 <li><a href="TermTk/TTkWidgets/menubar.html">TermTk.TTkWidgets.menubar</a></li>
 <li><a href="TermTk/TTkWidgets/radiobutton.html">TermTk.TTkWidgets.radiobutton</a></li>
@@ -197,12 +205,9 @@
 <li><a href="TermTk/TTkWidgets/spacer.html">TermTk.TTkWidgets.spacer</a></li>
 <li><a href="TermTk/TTkWidgets/spinbox.html">TermTk.TTkWidgets.spinbox</a></li>
 <li><a href="TermTk/TTkWidgets/splitter.html">TermTk.TTkWidgets.splitter</a></li>
-<li><a href="TermTk/TTkWidgets/table.html">TermTk.TTkWidgets.table</a></li>
-<li><a href="TermTk/TTkWidgets/tableview.html">TermTk.TTkWidgets.tableview</a></li>
 <li><a href="TermTk/TTkWidgets/tabwidget.html">TermTk.TTkWidgets.tabwidget</a></li>
 <li><a href="TermTk/TTkWidgets/texedit.html">TermTk.TTkWidgets.texedit</a></li>
 <li><a href="TermTk/TTkWidgets/tree.html">TermTk.TTkWidgets.tree</a></li>
-<li><a href="TermTk/TTkWidgets/treeview.html">TermTk.TTkWidgets.treeview</a></li>
 <li><a href="TermTk/TTkWidgets/treewidget.html">TermTk.TTkWidgets.treewidget</a></li>
 <li><a href="TermTk/TTkWidgets/widget.html">TermTk.TTkWidgets.widget</a></li>
 <li><a href="TermTk/TTkWidgets/window.html">TermTk.TTkWidgets.window</a></li>
