--- a/_modules/TermTk/TTkGui/theme.html
+++ b/_modules/TermTk/TTkGui/theme.html
@@ -284,8 +284,6 @@
 <span class="sd">        └  ─  ┴  ┘</span>
 <span class="sd">    &#39;&#39;&#39;</span>
 
-
-
     <span class="n">buttonBox</span> <span class="o">=</span> <span class="p">(</span>
       <span class="p">(</span><span class="s1">&#39;┌&#39;</span><span class="p">,</span><span class="s1">&#39;─&#39;</span><span class="p">,</span><span class="s1">&#39;┐&#39;</span><span class="p">,</span>
        <span class="s1">&#39;│&#39;</span><span class="p">,</span><span class="s1">&#39; &#39;</span><span class="p">,</span><span class="s1">&#39;│&#39;</span><span class="p">,</span>
@@ -305,6 +303,10 @@
     <span class="n">hscroll</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;◀&#39;</span><span class="p">,</span><span class="s1">&#39;┄&#39;</span><span class="p">,</span><span class="s1">&#39;▓&#39;</span><span class="p">,</span><span class="s1">&#39;▶&#39;</span><span class="p">)</span>
     <span class="n">vscroll</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;▲&#39;</span><span class="p">,</span><span class="s1">&#39;┊&#39;</span><span class="p">,</span><span class="s1">&#39;▓&#39;</span><span class="p">,</span><span class="s1">&#39;▼&#39;</span><span class="p">)</span>
 
+    <span class="n">tree</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;•&#39;</span><span class="p">,</span><span class="s1">&#39;▶&#39;</span><span class="p">,</span><span class="s1">&#39;▼&#39;</span><span class="p">,</span><span class="s1">&#39; &#39;</span><span class="p">,</span>
+            <span class="s1">&#39;│&#39;</span><span class="p">,</span><span class="s1">&#39;╿&#39;</span><span class="p">)</span>
+
+
             <span class="c1">#   0   1   2   3   4   5</span>
     <span class="n">menuBar</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;├&#39;</span><span class="p">,</span><span class="s1">&#39;─&#39;</span><span class="p">,</span><span class="s1">&#39;┤&#39;</span><span class="p">,</span><span class="s1">&#39;┄&#39;</span><span class="p">,</span><span class="s1">&#39;┄&#39;</span><span class="p">,</span><span class="s1">&#39;▶&#39;</span><span class="p">)</span>
 
@@ -317,8 +319,8 @@
       <span class="c1">#11  12  13  14  15  16  17  18  19  20</span>
       <span class="s1">&#39;╞&#39;</span><span class="p">,</span><span class="s1">&#39;═&#39;</span><span class="p">,</span><span class="s1">&#39;╧&#39;</span><span class="p">,</span><span class="s1">&#39;╩&#39;</span><span class="p">,</span><span class="s1">&#39;╡&#39;</span><span class="p">,</span><span class="s1">&#39;╘&#39;</span><span class="p">,</span><span class="s1">&#39;╛&#39;</span><span class="p">,</span><span class="s1">&#39;└&#39;</span><span class="p">,</span><span class="s1">&#39;─&#39;</span><span class="p">,</span><span class="s1">&#39;┘&#39;</span><span class="p">,</span>
       <span class="c1">#21  22  23  24  25  26  27  28  29  30</span>
-      <span class="s1">&#39;╚&#39;</span><span class="p">,</span><span class="s1">&#39;╝&#39;</span><span class="p">,</span><span class="s1">&#39;╰&#39;</span><span class="p">,</span><span class="s1">&#39;╯&#39;</span><span class="p">,</span><span class="s1">&#39;⣿&#39;</span><span class="p">,</span><span class="s1">&#39;⣿&#39;</span><span class="p">,</span><span class="s1">&#39;╒&#39;</span><span class="p">,</span><span class="s1">&#39;╕&#39;</span><span class="p">,</span><span class="s1">&#39;X&#39;</span><span class="p">,</span><span class="s1">&#39;X&#39;</span><span class="p">,</span>
-      <span class="c1">#31  32</span>
+      <span class="s1">&#39;╚&#39;</span><span class="p">,</span><span class="s1">&#39;╝&#39;</span><span class="p">,</span><span class="s1">&#39;╰&#39;</span><span class="p">,</span><span class="s1">&#39;╯&#39;</span><span class="p">,</span><span class="s1">&#39;⣿&#39;</span><span class="p">,</span><span class="s1">&#39;⣿&#39;</span><span class="p">,</span><span class="s1">&#39;╒&#39;</span><span class="p">,</span><span class="s1">&#39;╕&#39;</span><span class="p">,</span><span class="s1">&#39;┴&#39;</span><span class="p">,</span><span class="s1">&#39;X&#39;</span><span class="p">,</span>
+      <span class="c1">#31  32  33  34  35  36  37  38  39  40</span>
       <span class="s1">&#39;◀&#39;</span><span class="p">,</span><span class="s1">&#39;▶&#39;</span>
     <span class="p">)</span>
     <span class="sd">&#39;&#39;&#39; Tab Examples</span>
@@ -436,7 +438,10 @@
     <span class="n">tabColorFocus</span>       <span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#aaaaaa&quot;</span><span class="p">)</span>
     <span class="n">tabOffsetColorFocus</span> <span class="o">=</span> <span class="n">tabOffsetColor</span>
     <span class="n">tabBorderColorFocus</span> <span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#ffff88&quot;</span><span class="p">)</span>
-    <span class="n">tabSelectColorFocus</span> <span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#ffff88&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">bg</span><span class="p">(</span><span class="s2">&quot;#000066&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">BOLD</span></div>
+    <span class="n">tabSelectColorFocus</span> <span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#ffff88&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">bg</span><span class="p">(</span><span class="s2">&quot;#000066&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">BOLD</span>
+
+    <span class="n">treeHeaderColor</span> <span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#ffffff&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">bg</span><span class="p">(</span><span class="s2">&quot;#444444&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">BOLD</span>
+    <span class="n">treeSelectedColor</span> <span class="o">=</span> <span class="n">TTkColor</span><span class="o">.</span><span class="n">fg</span><span class="p">(</span><span class="s2">&quot;#ffff88&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">bg</span><span class="p">(</span><span class="s2">&quot;#000066&quot;</span><span class="p">)</span><span class="o">+</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">BOLD</span></div>
 </pre></div>
 
            </div>
