--- a/_modules/TermTk/TTkWidgets/TTkPickers/colorpicker.html
+++ b/_modules/TermTk/TTkWidgets/TTkPickers/colorpicker.html
@@ -352,6 +352,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">clicked</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_clicked</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_textColorFocus</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_textColor</span>
 
+    <span class="nd">@pyTTkSlot</span><span class="p">(</span><span class="n">TTkColor</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">setColor</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">color</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_textColor</span> <span class="o">=</span> <span class="n">color</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_textColorFocus</span> <span class="o">=</span> <span class="n">color</span>
@@ -447,12 +448,14 @@
         <span class="k">def</span> <span class="nf">_okPressed</span><span class="p">():</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">color</span> <span class="o">=</span> <span class="n">sc</span><span class="o">.</span><span class="n">color</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">colorSelected</span><span class="o">.</span><span class="n">emit</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">color</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
 
         <span class="n">okButton</span><span class="o">.</span><span class="n">clicked</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="n">_okPressed</span><span class="p">)</span>
 
         <span class="nd">@pyTTkSlot</span><span class="p">()</span>
         <span class="k">def</span> <span class="nf">_cancelPressed</span><span class="p">():</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">colorSelected</span><span class="o">.</span><span class="n">emit</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">color</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
 
         <span class="n">cancelButton</span><span class="o">.</span><span class="n">clicked</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="n">_cancelPressed</span><span class="p">)</span>
 
@@ -591,8 +594,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_canvas</span><span class="o">.</span><span class="n">drawBoxTitle</span><span class="p">(</span><span class="n">pos</span><span class="o">=</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mi">17</span><span class="p">),</span> <span class="n">size</span><span class="o">=</span><span class="p">(</span><span class="mi">26</span><span class="p">,</span><span class="mi">0</span><span class="p">),</span> <span class="n">text</span><span class="o">=</span><span class="s2">&quot; Conrols &quot;</span><span class="p">,</span> <span class="n">align</span><span class="o">=</span><span class="n">TTkK</span><span class="o">.</span><span class="n">CENTER_ALIGN</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="n">color</span><span class="p">,</span> <span class="n">colorText</span><span class="o">=</span><span class="n">TTkCfg</span><span class="o">.</span><span class="n">theme</span><span class="o">.</span><span class="n">frameTitleColor</span><span class="p">)</span></div></div>
 
 <div class="viewcode-block" id="TTkColorButtonPicker"><a class="viewcode-back" href="../../../../autogen.TermTk/TermTk.TTkWidgets.TTkPickers.colorpicker.html#TermTk.TTkWidgets.TTkPickers.colorpicker.TTkColorButtonPicker">[docs]</a><span class="k">class</span> <span class="nc">TTkColorButtonPicker</span><span class="p">(</span><span class="n">_TTkColorButton</span><span class="p">):</span>
-    <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;_type&#39;</span><span class="p">)</span>
+    <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span><span class="s1">&#39;_type&#39;</span><span class="p">,</span> <span class="s1">&#39;colorSelected&#39;</span><span class="p">)</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+        <span class="c1"># Signals</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">colorSelected</span> <span class="o">=</span> <span class="n">pyTTkSignal</span><span class="p">(</span><span class="n">TTkColor</span><span class="p">)</span>
         <span class="n">_TTkColorButton</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_name</span> <span class="o">=</span> <span class="n">kwargs</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;name&#39;</span> <span class="p">,</span> <span class="s1">&#39;TTkColorButtonPicker&#39;</span> <span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_custom</span> <span class="o">=</span> <span class="kc">False</span>
@@ -601,16 +606,17 @@
         <span class="n">hexColor</span> <span class="o">=</span>  <span class="bp">self</span><span class="o">.</span><span class="n">_textColor</span><span class="o">.</span><span class="n">getHex</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_type</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">setColor</span><span class="p">(</span><span class="n">TTkColor</span><span class="o">.</span><span class="n">bg</span><span class="p">(</span><span class="n">hexColor</span><span class="p">))</span>
 
-    <span class="nd">@pyTTkSlot</span><span class="p">(</span><span class="n">TTkColor</span><span class="p">)</span>
-    <span class="k">def</span> <span class="nf">colorSelected</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">color</span><span class="p">):</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">setColor</span><span class="p">(</span><span class="n">color</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">setFocus</span><span class="p">()</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">update</span><span class="p">()</span>
+    <span class="c1">#@pyTTkSlot(TTkColor)</span>
+    <span class="c1">#def colorSelected(self, color):</span>
+    <span class="c1">#    self.setColor(color)</span>
+    <span class="c1">#    #self.setFocus()</span>
+    <span class="c1">#    #self.update()</span>
 
     <span class="nd">@pyTTkSlot</span><span class="p">()</span>
     <span class="k">def</span> <span class="nf">_colorClicked</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">colorPicker</span> <span class="o">=</span> <span class="n">TTkColorDialogPicker</span><span class="p">(</span><span class="n">pos</span> <span class="o">=</span> <span class="p">(</span><span class="mi">3</span><span class="p">,</span><span class="mi">3</span><span class="p">),</span> <span class="n">size</span><span class="o">=</span><span class="p">(</span><span class="mi">75</span><span class="p">,</span><span class="mi">24</span><span class="p">),</span> <span class="n">color</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_textColor</span><span class="p">,</span> <span class="n">title</span><span class="o">=</span><span class="s2">&quot;Test Color Picker&quot;</span><span class="p">,</span> <span class="n">border</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
-        <span class="n">colorPicker</span><span class="o">.</span><span class="n">colorSelected</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">colorSelected</span><span class="p">)</span>
+        <span class="n">colorPicker</span><span class="o">.</span><span class="n">colorSelected</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">setColor</span><span class="p">)</span>
+        <span class="n">colorPicker</span><span class="o">.</span><span class="n">colorSelected</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">colorSelected</span><span class="o">.</span><span class="n">emit</span><span class="p">)</span>
         <span class="n">TTkHelper</span><span class="o">.</span><span class="n">overlay</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">colorPicker</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">,</span><span class="o">-</span><span class="mi">1</span><span class="p">)</span></div>
 
 </pre></div>
