--- a/_modules/TermTk/TTkWidgets/menubar.html
+++ b/_modules/TermTk/TTkWidgets/menubar.html
@@ -293,7 +293,7 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">menuButtonClicked</span><span class="o">.</span><span class="n">emit</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span>
             <span class="k">return</span>
         <span class="c1"># Import here to avoid circular import</span>
-        <span class="kn">from</span> <span class="nn">TermTk.TTkWidgets.list</span>   <span class="kn">import</span> <span class="n">TTkList</span>
+        <span class="kn">from</span> <span class="nn">TermTk.TTkWidgets.list_</span> <span class="kn">import</span> <span class="n">TTkList</span>
         <span class="kn">from</span> <span class="nn">TermTk.TTkWidgets.resizableframe</span> <span class="kn">import</span> <span class="n">TTkResizableFrame</span>
 
         <span class="c1"># Stupid way to find out if I am a submenu</span>
