--- a/_modules/TermTk/TTkWidgets/splitter.html
+++ b/_modules/TermTk/TTkWidgets/splitter.html
@@ -200,14 +200,15 @@
 <div class="viewcode-block" id="TTkSplitter"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter">[docs]</a><span class="k">class</span> <span class="nc">TTkSplitter</span><span class="p">(</span><span class="n">TTkFrame</span><span class="p">):</span>
     <span class="vm">__slots__</span> <span class="o">=</span> <span class="p">(</span>
         <span class="s1">&#39;_splitterInitialized&#39;</span><span class="p">,</span> <span class="s1">&#39;_orientation&#39;</span><span class="p">,</span>
-        <span class="s1">&#39;_separators&#39;</span><span class="p">,</span> <span class="s1">&#39;_separatorsRef&#39;</span><span class="p">,</span> <span class="s1">&#39;_sizeRef&#39;</span><span class="p">,</span>
-        <span class="s1">&#39;_separatorSelected&#39;</span><span class="p">,</span> <span class="s1">&#39;_mouseDelta&#39;</span><span class="p">)</span>
+        <span class="s1">&#39;_separators&#39;</span><span class="p">,</span> <span class="s1">&#39;_separatorsRef&#39;</span><span class="p">,</span> <span class="s1">&#39;_sizeRef&#39;</span><span class="p">,</span> <span class="s1">&#39;_initSizes&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;_separatorSelected&#39;</span><span class="p">)</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_splitterInitialized</span> <span class="o">=</span> <span class="kc">False</span>
         <span class="c1"># self._splitterInitialized = True</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_separators</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_separatorsRef</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_sizeRef</span> <span class="o">=</span> <span class="mi">0</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_initSizes</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_separatorSelected</span> <span class="o">=</span> <span class="kc">None</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_orientation</span> <span class="o">=</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">HORIZONTAL</span>
         <span class="n">TTkFrame</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
@@ -227,6 +228,7 @@
         <span class="k">else</span><span class="p">:</span>
             <span class="n">fullSize</span> <span class="o">=</span> <span class="n">h</span>
         <span class="c1"># assign the same slice to all the widgets</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_initSizes</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">size</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_separators</span> <span class="o">=</span> <span class="p">[</span><span class="n">fullSize</span><span class="o">*</span><span class="n">i</span><span class="o">//</span><span class="n">numW</span> <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span><span class="n">numW</span><span class="o">+</span><span class="mi">1</span><span class="p">)]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_updateGeometries</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_separatorsRef</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_separators</span>
@@ -325,6 +327,21 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">_sizeRef</span> <span class="o">=</span> <span class="n">size</span>
 
 <div class="viewcode-block" id="TTkSplitter.resizeEvent"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.resizeEvent">[docs]</a>    <span class="k">def</span> <span class="nf">resizeEvent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">w</span><span class="p">,</span> <span class="n">h</span><span class="p">):</span>
+        <span class="k">if</span> <span class="n">w</span><span class="o">==</span><span class="n">h</span><span class="o">==</span><span class="mi">0</span><span class="p">:</span> <span class="k">return</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">_sizeRef</span><span class="p">:</span>
+            <span class="c1"># This is the first resize (w,h != 0 and previous reference size was 0)</span>
+            <span class="c1"># I need to define the initial position of all the widgets</span>
+            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_orientation</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">HORIZONTAL</span><span class="p">:</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">_sizeRef</span> <span class="o">=</span> <span class="n">w</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">_sizeRef</span> <span class="o">=</span> <span class="n">h</span>
+            <span class="c1"># get the sum of the fixed sizes</span>
+            <span class="n">fixSize</span> <span class="o">=</span> <span class="nb">sum</span><span class="p">(</span><span class="nb">filter</span><span class="p">(</span><span class="kc">None</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_initSizes</span><span class="p">))</span>
+            <span class="n">numVarSizes</span> <span class="o">=</span> <span class="nb">len</span><span class="p">([</span><span class="n">x</span> <span class="k">for</span> <span class="n">x</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_initSizes</span> <span class="k">if</span> <span class="n">x</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">])</span>
+            <span class="n">avalSize</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_sizeRef</span><span class="o">-</span><span class="n">fixSize</span>
+            <span class="n">sizes</span> <span class="o">=</span> <span class="p">[</span><span class="n">avalSize</span><span class="o">//</span><span class="n">numVarSizes</span> <span class="k">if</span> <span class="n">s</span> <span class="ow">is</span> <span class="kc">None</span> <span class="k">else</span> <span class="n">s</span> <span class="k">for</span> <span class="n">s</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_initSizes</span><span class="p">]</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_separatorsRef</span> <span class="o">=</span> <span class="p">[</span><span class="nb">sum</span><span class="p">(</span><span class="n">sizes</span><span class="p">[:</span><span class="n">i</span><span class="o">+</span><span class="mi">1</span><span class="p">])</span> <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">sizes</span><span class="p">))]</span>
+
         <span class="c1"># Adjust separators to the new size;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_separatorSelected</span> <span class="o">=</span> <span class="kc">None</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_sizeRef</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
@@ -346,11 +363,9 @@
 
 <div class="viewcode-block" id="TTkSplitter.mousePressEvent"><a class="viewcode-back" href="../../../autogen.TermTk/TermTk.TTkWidgets.splitter.html#TermTk.TTkWidgets.splitter.TTkSplitter.mousePressEvent">[docs]</a>    <span class="k">def</span> <span class="nf">mousePressEvent</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">evt</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_separatorSelected</span> <span class="o">=</span> <span class="kc">None</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_mouseDelta</span> <span class="o">=</span> <span class="p">(</span><span class="n">evt</span><span class="o">.</span><span class="n">x</span><span class="p">,</span> <span class="n">evt</span><span class="o">.</span><span class="n">y</span><span class="p">)</span>
         <span class="n">x</span><span class="p">,</span><span class="n">y</span> <span class="o">=</span> <span class="n">evt</span><span class="o">.</span><span class="n">x</span><span class="p">,</span> <span class="n">evt</span><span class="o">.</span><span class="n">y</span>
         <span class="c1"># TTkLog.debug(f&quot;{self._separators} {evt}&quot;)</span>
-        <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_separators</span><span class="p">)):</span>
-            <span class="n">val</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_separators</span><span class="p">[</span><span class="n">i</span><span class="p">]</span>
+        <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">val</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_separators</span><span class="p">):</span>
             <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_orientation</span> <span class="o">==</span> <span class="n">TTkK</span><span class="o">.</span><span class="n">HORIZONTAL</span><span class="p">:</span>
                 <span class="k">if</span> <span class="n">x</span> <span class="o">==</span> <span class="n">val</span><span class="p">:</span>
                     <span class="bp">self</span><span class="o">.</span><span class="n">_separatorSelected</span> <span class="o">=</span> <span class="n">i</span>
