--- a/genindex.html
+++ b/genindex.html
@@ -218,6 +218,8 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor.bg">bg() (TTkColor static method)</a>
+</li>
       <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor.BOLD">BOLD (TTkColor attribute)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.buttonBorderColor">buttonBorderColor (TTkTheme attribute)</a>
@@ -297,6 +299,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.failNameColor">failNameColor (TTkTheme attribute)</a>
+</li>
+      <li><a href="autogen.TermTk/TermTk.TTkCore.color.html#TermTk.TTkCore.color.TTkColor.fg">fg() (TTkColor static method)</a>
 </li>
       <li><a href="autogen.TermTk/TermTk.TTkGui.theme.html#TermTk.TTkGui.theme.TTkTheme.fileIconColor">fileIconColor (TTkTheme attribute)</a>
 </li>
